# pcreator

./: .gitignore  README.html  README.md  pcreator  pcreator.bat
build_prototype/: build_header.prototype  unix_build.prototype  win_build.prototype
newproto/: build.bat
newproto/config/: macconf.cmake  winconf.cmake
newproto/test/: CmakeLists.txt
prototype/: CmakeLists.txt  build.bat
prototype/config/: linuxconf.cmake  macconf.cmake  winconf.cmake
prototype/debug/: update.bat
prototype/runtime/: CmakeLists.txt
prototype/src/: CmakeLists.txt  main.cpp
prototype/test/: CMakeLists.txt  CmakeLists.txt  main.cpp
prototype_c/: CMakeLists.txt
prototype_c/config/: linuxconf.cmake  macconf.cmake  winconf.cmake
prototype_c/runtime/: CMakeLists.txt  main.c
prototype_cpp/: CMakeLists.txt  d  dt  r  t
prototype_cpp/config/: linuxconf.cmake
prototype_cpp/sharedlib/: CMakeLists.txt
prototype_cpp/staticlib/: CMakeLists.txt
prototype_cpp/test/: CMakeLists.txt  main.cpp
