# main cmake file
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

PROJECT(${PRJ_NAME})

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")

# generate bin to the TARGET_ARCHITECTURE dir.
# IF ( DEFINED CMAKE_LIBRARY_ARCHITECTURE )
#     SET (TARGET_ARCHITECTURE ${CMAKE_LIBRARY_ARCHITECTURE}) 
# ELSE()
#     IF ( DEFINED TARGET_BITNESS )
# 		SET (TARGET_ARCHITECTURE ${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR}_${TARGET_BITNESS} )
#     ELSE()
# 		SET (TARGET_ARCHITECTURE ${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR} )
# 	ENDIF()
# ENDIF()

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${TARGET_ARCHITECTURE}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${TARGET_ARCHITECTURE}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${TARGET_ARCHITECTURE}")

# ADD_SUBDIRECTORY( test )
ADD_SUBDIRECTORY( runtime )
