# src cmake file
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

PROJECT(${PRJ_NAME})

if ( ${WIN32} )
	MESSAGE(STATUS "system is win32")
	INCLUDE(../config/winconf.cmake)
ELSE()
	IF ( ${APPLE} )
		MESSAGE(STATUS "system is apple")
		INCLUDE(../config/macconf.cmake)
	ELSE()
		MESSAGE(STATUS "system is linux")
		INCLUDE(../config/linuxconf.cmake)
	ENDIF()
ENDIF()


SET(PROJECT_INCLUDE_DIR "${PROJECT_SOURCE_DIR}")

SET(TARGET_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../src)

FILE(GLOB_RECURSE TARGET_C_SRC  ${TARGET_SRC_DIR}/*.c)

FILE(GLOB_RECURSE RUNTIME_SRC ${CMAKE_CURRENT_SOURCE_DIR} *.c)
FILE(GLOB_RECURSE ${PROJECT_NAME}_HEADERS *.h)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/../inc
    ${EXTRA_INCLUDES}
    ) 
LINK_DIRECTORIES(
	${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
	${EXTRA_LIBS}
	)
ADD_EXECUTABLE(${PROJECT_NAME} ${RUNTIME_SRC} ${TARGET_C_SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${REQUIRED_LIBRARIES})